--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@babel/core": "^7.11.6",
         "@babel/preset-env": "^7.11.5",
         "babel-loader": "^8.1.0",
+        "boostrap": "^2.0.0",
         "css-loader": "^4.3.0",
         "dotenv-webpack": "^3.0.0",
         "file-loader": "^6.1.1",
